engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__namespaced-issue.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(NAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"3\"\n                })).await.into_value()"
---
{
  "data": {
    "gothub": {
      "pullRequestOrIssue": {
        "__typename": "GothubIssue",
        "author": {
          "__typename": "GothubUser",
          "email": "pessimist@example.com"
        },
        "title": "Everythings fucked"
      },
      "serverVersion": "1"
    }
  }
}
