engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__namespaced-pull-request-with-bot.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(NAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"2\"\n                })).await.into_value()"
---
{
  "data": {
    "gothub": {
      "pullRequestOrIssue": {
        "__typename": "GothubPullRequest",
        "author": {
          "__typename": "GothubBot",
          "id": "123"
        },
        "checks": [
          "Success!"
        ],
        "title": "Some bot PR"
      },
      "serverVersion": "1"
    }
  }
}
