engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__namespaced-pull-request-with-user.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(NAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"1\"\n                })).await.into_value()"
---
{
  "data": {
    "gothub": {
      "pullRequestOrIssue": {
        "__typename": "GothubPullRequest",
        "author": {
          "__typename": "GothubUser",
          "email": "jim@example.com"
        },
        "checks": [
          "Success!"
        ],
        "title": "Creating the thing"
      },
      "serverVersion": "1"
    }
  }
}
