engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__unnamespaced-issue.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(UNNAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"3\"\n                })).await.into_value()"
---
{
  "data": {
    "pullRequestOrIssue": {
      "__typename": "Issue",
      "author": {
        "__typename": "User",
        "email": "pessimist@example.com"
      },
      "title": "Everythings fucked"
    },
    "serverVersion": "1"
  }
}
