engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__unnamespaced-pull-request-with-user.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(UNNAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"1\"\n                })).await.into_value()"
---
{
  "data": {
    "pullRequestOrIssue": {
      "__typename": "PullRequest",
      "author": {
        "__typename": "User",
        "email": "jim@example.com"
      },
      "checks": [
        "Success!"
      ],
      "title": "Creating the thing"
    },
    "serverVersion": "1"
  }
}
